setting up postgres backend job que
